--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOfrDkkufRJT1MPJE47psf3",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNbca9kPe6PhCDV1SUgWm6Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -145,6 +146,56 @@
       ],
       "metadata": {
         "id": "XfmtCnA9snUW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Tokenize it!"
+      ],
+      "metadata": {
+        "id": "AqoA4rs_3nZm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from transformers import AutoTokenizer\n",
+        "from datasets import load_from_disk\n",
+        "\n",
+        "dataset = load_from_disk(\"v01/dataset_clean\")\n",
+        "\n",
+        "tokenizer = AutoTokenizer.from_pretrained(\"MilaNLProc/feel-it-italian-sentiment\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "uEPGCdPp3rxD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def tokenize_function(examples):\n",
+        "    return tokenizer(examples[\"text\"], truncation=True, max_length=128)"
+      ],
+      "metadata": {
+        "id": "bn-dR0Gz3vNq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenized_dataset = dataset.map(tokenize_function, batched=True)\n",
+        "print(tokenized_dataset)"
+      ],
+      "metadata": {
+        "id": "7SgW1xLd3wbM"
       },
       "execution_count": null,
       "outputs": []
