--- a/sentiment_analysis_training.ipynb
+++ b/sentiment_analysis_training.ipynb
@@ -4,9 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMpeodxeAYKGX4a8mu7M4hS",
+      "authorship_tag": "ABX9TyP/jX0f+IJHivzVlgNXSeSN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,6 +38,39 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Create a secret variable named \"gh_username\" with your github/huggingface username"
+      ],
+      "metadata": {
+        "id": "c9Uk3MI4wBP5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import userdata\n",
+        "username = userdata.get('gh_username')\n",
+        "print(username)"
+      ],
+      "metadata": {
+        "id": "pHWGMJ6mvcZT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install transformers datasets"
+      ],
+      "metadata": {
+        "id": "EnH-Ms0_vtIZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -46,12 +78,10 @@
       },
       "outputs": [],
       "source": [
-        "!pip install transformers datasets\n",
-        "\n",
         "from datasets import load_dataset\n",
         "\n",
         "# Change the username with yours\n",
-        "dataset = load_dataset(\"wbigger/sentiment-analysis-test\")\n"
+        "dataset = load_dataset(f\"{username}/sentiment-analysis-test\")\n"
       ]
     },
     {
@@ -202,29 +232,6 @@
       "source": [
         "from transformers import pipeline, AutoModelForSequenceClassification\n",
         "\n",
-        "# Load and test our model\n",
-        "sentiment_pipeline = pipeline(\"sentiment-analysis\", model=\"wbigger/sentiment-analysis-test\")\n",
-        "\n",
-        "prompt = \"Personale docente\"\n",
-        "\n",
-        "print(f\"Sentiment for prompt {prompt}:\")\n",
-        "print(sentiment_pipeline(prompt))\n",
-        "\n",
-        "prompt = \"Interrogazioni a sorpresa\"\n",
-        "print(f\"Sentiment for prompt {prompt}:\")\n",
-        "print(sentiment_pipeline(prompt))"
-      ],
-      "metadata": {
-        "id": "snoNBZ9Sh0c6"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from transformers import pipeline, AutoModelForSequenceClassification\n",
-        "\n",
         "# Load and test the original model\n",
         "sentiment_pipeline_orig = pipeline(\"sentiment-analysis\", model=\"cardiffnlp/xlm-roberta-base-tweet-sentiment-it\")\n",
         "\n",
@@ -239,6 +246,29 @@
       ],
       "metadata": {
         "id": "M-wsCD6isAHl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from transformers import pipeline, AutoModelForSequenceClassification\n",
+        "\n",
+        "# Load and test our model\n",
+        "sentiment_pipeline = pipeline(\"sentiment-analysis\", model=f\"{username}/sentiment-analysis-test\")\n",
+        "\n",
+        "prompt = \"Personale docente\"\n",
+        "\n",
+        "print(f\"Sentiment for prompt {prompt}:\")\n",
+        "print(sentiment_pipeline(prompt))\n",
+        "\n",
+        "prompt = \"Interrogazioni a sorpresa\"\n",
+        "print(f\"Sentiment for prompt {prompt}:\")\n",
+        "print(sentiment_pipeline(prompt))"
+      ],
+      "metadata": {
+        "id": "snoNBZ9Sh0c6"
       },
       "execution_count": null,
       "outputs": []
@@ -269,7 +299,7 @@
         "import gradio as gr\n",
         "\n",
         "# Load and test our model\n",
-        "sentiment_pipeline = pipeline(\"sentiment-analysis\", model=\"wbigger/sentiment-analysis-test\")\n",
+        "sentiment_pipeline = pipeline(\"sentiment-analysis\", model=f\"{username}/sentiment-analysis-test\")\n",
         "\n",
         "def analyze_sentiment(text):\n",
         "    result = sentiment_pipeline(text)\n",
